@@ -1,10 +1,11 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Rcs-Parser
-version:      0.03
-version_from: lib/Rcs/Parser.pm
-installdirs:  site
-requires:
-
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.21
+abstract:     Parse RCS source control files.
+installdirs:  site
+license:      perl
+name:         Rcs-Parser
+version:      VERSIONTAG
+version_from: lib/Rcs/Parser.pm
+requires:
+  Sort::Versions: 0
+
