@@ -1,10 +1,8 @@
 use ExtUtils::MakeMaker;
-# See lib/ExtUtils/MakeMaker.pm for details of how to influence
-# the contents of the Makefile that is written.
 WriteMakefile(
     'NAME'		=> 'Rcs::Parser',
-    'VERSION_FROM'	=> 'lib/Rcs/Parser.pm', # finds $VERSION
-    'PREREQ_PM'		=> {}, # e.g., Module::Name => 1.1
+    'VERSION_FROM'	=> 'lib/Rcs/Parser.pm', 
+    'PREREQ_PM'		=> { 'Sort::Versions' => '0' }, 
     ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM => 'lib/Rcs/Parser.pm', # retrieve abstract from module
        AUTHOR     => 'Phil Pollard <bennie@cpan.org>') : ()),
